--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^0.23.1",
+    "es6-promise": "^3.2.1",
     "style-loader": "^0.13.1"
   },
   "devDependencies": {
