--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A portfolio site of art and a front end development showpiece.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --progress --colors"
   },
   "keywords": [
     "react",
