Add stylus loader and resolve stylus extensions

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1"
   },
   "devDependencies": {
     "webpack": "^1.13.2",
