--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "keywords": [
     "react",
     "design",
-    "webpack"
+    "webpack",
+    "stylus"
   ],
   "author": "Katryn McIntosh",
   "license": "ISC",
   "dependencies": {
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
+    "nib": "^1.1.2",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1"
