--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Katryn McIntosh",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
     "nib": "^1.1.2",
@@ -24,6 +25,8 @@
     "stylus-loader": "^2.3.1"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   }
