--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
     "nib": "^1.1.2",
