--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
     "nib": "^1.1.2",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1"
