--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:lint": "eslint . --ext .js --ext .jsx --cache",
     "start": "webpack-dev-server --progress --colors"
   },
   "keywords": [
