--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "stylus-loader": "^2.3.1"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "file-loader": "^0.9.0",
