--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
