--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:lint": "eslint . --ext .js --ext .jsx --cache",
+    "test:lint": "eslint app/** --ext .js --ext .jsx --ignore-path .gitignore --cache",
     "start": "webpack-dev-server --progress --colors"
   },
   "keywords": [
@@ -33,6 +33,8 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "eslint": "^3.4.0",
+    "eslint-plugin-react": "^6.2.0",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
     "url-loader": "^0.5.7",
