--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
+    "material-design-icons": "^3.0.1",
     "nib": "^1.1.2",
     "ramda": "^0.22.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-icons": "^2.2.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1"
