--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "file-loader": "^0.9.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.0"
+    "webpack-dev-server": "^1.15.0",
+    "webpack-validator": "^2.2.9"
   }
 }
