--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:lint": "eslint app/** --ext .js --ext .jsx --ignore-path .gitignore --cache",
-    "start": "node ./app/entry.jsx",
-    "postinstall": "node deploy"
+    "start": "webpack-dev-server --progress --colors",
+    "postinstall": "node deploy",
+    "build": "webpack --env.dev",
+    "build:prod": "webpack --env.prod -p"
   },
   "keywords": [
     "react",
