--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:lint": "eslint app/** --ext .js --ext .jsx --ignore-path .gitignore --cache",
-    "start": "webpack-dev-server --progress --colors",
+    "start": "webpack-dev-server --env.dev --progress --colors",
     "postinstall": "node deploy",
     "build": "webpack --env.dev",
     "build:prod": "webpack --env.prod -p"
