--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "A portfolio site of art and a front end development showpiece.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:lint": "eslint app/** --ext .js --ext .jsx --ignore-path .gitignore --cache",
-    "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development node app.js",
-    "validate-webpack:dev": "webpack-validator webpack.config.js --env.dev",
-    "validate-webpack:prod": "webpack-validator webpack.production.config.js --env.prod",
-    "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress --colors"
+    "start": "node_modules/.bin/webpack-dev-server --hot --inline --open",
+    "build": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "keywords": [
     "react",
@@ -47,8 +42,9 @@
     "eslint-plugin-react": "^6.2.0",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.28.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.15.0",
     "webpack-hot-middleware": "^2.13.2"
