--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^3.4.0",
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.9.0",
+    "prop-types": "^15.5.8",
     "url-loader": "^0.5.7",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^1.15.0"
