--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^15.3.1",
     "react-icons": "^2.2.1",
     "react-router": "^2.8.1",
+    "react-router-dom": "^4.1.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1"
