--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Katryn McIntosh",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
@@ -28,10 +28,14 @@
     "react-dom": "^15.3.1",
     "react-icons": "^2.2.1",
     "react-router-dom": "^4.1.1",
+    "react-svg-loader": "^1.1.1",
     "react-transition-group": "^1.1.3",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1"
+    "stylus-loader": "^2.3.1",
+    "svg-injector": "^1.1.3",
+    "svg-inline-loader": "^0.8.0",
+    "svg-react-loader": "^0.4.5"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
