--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "katryn_mcintosh",
   "version": "1.0.0",
-  "description":
-    "A portfolio site of art and a front end development showpiece.",
+  "description": "A portfolio site of art and a front end development showpiece.",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "pretty":
-      "prettier --trailing-comma es5 --write --jsx-bracket-same-line 'app{/**/*.js,/**/*.jsx}'",
+    "pretty": "prettier --trailing-comma es5 --write --jsx-bracket-same-line 'app{/**/*.js,/**/*.jsx}'",
     "start-dev": "node_modules/.bin/webpack-dev-server --hot --inline --open",
     "build": "./node_modules/.bin/webpack --config webpack.config.js"
   },
-  "keywords": ["react", "design", "webpack", "stylus"],
+  "keywords": [
+    "react",
+    "design",
+    "webpack",
+    "stylus"
+  ],
   "author": "Katryn McIntosh",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
@@ -33,12 +35,13 @@
     "stylus-loader": "^2.3.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^3.4.0",
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.9.0",
+    "postcss-loader": "^2.0.8",
     "prop-types": "^15.5.8",
     "url-loader": "^0.5.7",
     "webpack": "^2.3.3",
