--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
   "name": "katryn_mcintosh",
   "version": "1.0.0",
-  "description":
-    "A portfolio site of art and a front end development showpiece.",
+  "description": "A portfolio site of art and a front end development showpiece.",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "pretty":
-      "prettier --trailing-comma es5 --write --jsx-bracket-same-line 'app{/**/*.js,/**/*.jsx}'",
-    "start-dev": "node_modules/.bin/webpack-dev-server --hot --inline --open",
+    "pretty": "prettier --trailing-comma es5 --write --jsx-bracket-same-line 'app{/**/*.js,/**/*.jsx}'",
+    "start-dev": "NODE_ENV=development webpack-dev-server --hot --mode development",
     "build": "./node_modules/.bin/webpack --config webpack.config.js"
   },
-  "keywords": ["react", "design", "webpack", "stylus"],
+  "keywords": [
+    "react",
+    "design",
+    "webpack"
+  ],
   "author": "Katryn McIntosh",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "css-loader": "^0.23.1",
-    "express": "^4.14.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "css-loader": "^2.1.0",
     "nib": "^1.1.2",
     "prettier": "^1.15.3",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
-    "react-addons-transition-group": "^15.3.2",
-    "react-dom": "^15.3.1",
-    "react-icons": "^2.2.1",
-    "react-router-dom": "^4.1.1",
+    "react-addons-transition-group": "^15.6.2",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
+    "react-icons": "^3.2.2",
+    "react-router-dom": "^4.3.1",
     "react-transition-group": "^1.1.3",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1"
+    "stylus-loader": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "eslint": "^3.4.0",
-    "eslint-plugin-react": "^6.2.0",
+    "babel-loader": "^8.0.5",
     "file-loader": "^3.0.1",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.6.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   }
 }
