--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "css-loader": "^2.1.0",
-    "nib": "^1.1.2",
     "prettier": "^1.15.3",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
@@ -33,9 +32,7 @@
     "react-icons": "^3.2.2",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^1.1.3",
-    "style-loader": "^0.23.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
