--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "css-loader": "^3.2.0",
+    "express": "^4.17.1",
     "prettier": "^1.18.2",
     "ramda": "^0.26.1",
     "react": "^16.9.0",
