--- a/package.json
+++ b/package.json
@@ -17,28 +17,29 @@
   "author": "Katryn McIntosh",
   "license": "ISC",
   "dependencies": {
+    "ramda": "^0.26.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+
+    "react-icons": "^3.7.0",
+    "react-router-dom": "^5.1.2"
+  },
+  "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
-    "prettier": "^1.18.2",
-    "ramda": "^0.26.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-hot-loader": "^4.12.14",
-    "react-icons": "^3.7.0",
-    "react-router-dom": "^5.1.0",
-    "style-loader": "^1.0.0"
-  },
-  "devDependencies": {
-    "babel-loader": "^8.0.6",
     "file-loader": "^4.2.0",
+    "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.41.0",
+    "react-hot-loader": "^4.12.14",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack-dev-server": "^3.8.2",
+    "webpack": "^4.41.0"
   }
 }
