--- a/package.json
+++ b/package.json
@@ -20,26 +20,28 @@
     "ramda": "^0.26.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
+    "@types/ramda": "^0.26.26",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-router": "^5.1.1",
+    "@types/react-router-dom": "^5.1.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react-hot-loader": "^4.12.14",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.3",
     "url-loader": "^2.2.0",
+    "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "webpack": "^4.41.0"
+    "webpack-dev-server": "^3.8.2"
   }
 }
