--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "noImplicitAny": true,
-    "outDir": "./dist/",
+    "outDir": "./build/",
     "sourceMap": true,
     "module": "ES2015",
     "moduleResolution": "Node",
@@ -14,6 +14,7 @@
     "paths": {
       "components/*": ["./app/components/*"],
       "styles/*": ["./app/assets/styles/*"],
+      "images/*": ["./app/assets/images/*"],
       "config/*": ["app/config/*"]
     },
     "rootDirs": ["app"],
