--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
     "css-loader": "^3.2.0",
+    "eslint": "^6.5.1",
     "file-loader": "^4.2.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
@@ -40,7 +43,6 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
-    "tslint": "^5.20.0",
     "typescript": "^3.6.3",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.0",
