--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack --config webpack.config.js",
-    "lint": "eslint --ext .ts --ext .tsx app",
+    "lint": "eslint --ext .ts --ext .tsx app/",
     "pretty": "prettier --trailing-comma es5 --write --jsx-bracket-same-line 'app{/**/*.ts,/**/*.tsx}'",
     "start-dev": "NODE_ENV=development webpack-dev-server --hot --mode development",
     "start": "NODE_ENV=production node app.js"
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^2.3.2",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.2.0",
