Convert to css modules

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack --config webpack.config.js",
-    "lint": "eslint --ext .ts --ext .tsx app/",
-    "pretty": "prettier --write 'app{/**/*.ts,/**/*.tsx}'",
+    "lint": "eslint --ext .ts --ext .tsx src/",
+    "pretty": "prettier --write 'src{/**/*.ts,/**/*.tsx}'",
     "start-dev": "NODE_ENV=development webpack-dev-server --hot --mode development",
     "start": "NODE_ENV=production node app.js"
   },
